fix lint warnings. Remove unused argument on Synchronizer API. Use explicit Locale.US for NanoHTTP server header parsing. Remove guards for Build.VERSION < 14. Update tests to newer test framework.